--- a/Layout/Aula/2de2_pt-br.html
+++ b/Layout/Aula/2de2_pt-br.html
@@ -313,57 +313,60 @@
 
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="#capa">Biomassa
+													<a class="nav-link my-1" href="2de2_pt-br.html#capa">Biomassa
 														residual orgânica</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-1">Apresentação da
+																href="2de2_pt-br.html#2-aula2-section-1">Apresentação da
 																aula</a> </li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-2">Biomassa residual
+																href="2de2_pt-br.html#2-aula2-section-2">Biomassa
+																residual
 																orgânica</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-3">Características
+																href="2de2_pt-br.html#2-aula2-section-3">Características
 																físico-químicas do resíduo orgânico urbano</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-4">Principais fontes
+																href="2de2_pt-br.html#2-aula2-section-4">Principais
+																fontes
 																de resíduos orgânicos urbanos</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-5">Efluentes
+																href="2de2_pt-br.html#2-aula2-section-5">Efluentes
 																domésticos × efluentes industriais (resíduos
 																orgânicos)</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-6">Resíduos
+																href="2de2_pt-br.html#2-aula2-section-6">Resíduos
 																agrícolas</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-7">Aplicações de
+																href="2de2_pt-br.html#2-aula2-section-7">Aplicações de
 																biomassa residual orgânica</a>
 														</li>
-														<li><a class="nav-link ms-3 my-1" href="#2-aula2-section-8">Uso
+														<li><a class="nav-link ms-3 my-1"
+																href="2de2_pt-br.html#2-aula2-section-8">Uso
 																de biomassa
 																residual orgânica na produção de biocombustíveis</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-9">Benefícios
+																href="2de2_pt-br.html#2-aula2-section-9">Benefícios
 																ambientais para o uso de biomassa residual orgânica</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-10">Perspectivas
+																href="2de2_pt-br.html#2-aula2-section-10">Perspectivas
 																futuras para desenvolvimento e utilização de biomassa
 																residual orgânica</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-11">Praticando</a>
+																href="2de2_pt-br.html#2-aula2-section-11">Praticando</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="#2-aula2-section-12">Recapitulando</a>
+																href="2de2_pt-br.html#2-aula2-section-12">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -371,7 +374,7 @@
 
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="2de3_pt-br.html#2-capa">Biomassa
+													<a class="nav-link my-1" href="2de3_pt-br.html#capa">Biomassa
 														aquática</a>
 												</li>
 												<div class="nav">
@@ -415,6 +418,236 @@
 														</li>
 														<li><a class="nav-link ms-3 my-1"
 																href="2de3_pt-br.html#2-aula3-section-10">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<!-- 3 -->
+								<li>
+									<a class="nav-link uk-accordion-title">
+										<i class="bi bi-pin-fill"></i>
+										Módulo 3
+									</a>
+									<div class="uk-accordion-content">
+										<div class="nav nav-pills flex-column">
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="3de1_pt-br.html#capa">Diferenças
+														entre o etanol de diferentes gerações
+													</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-2">Diferenças
+																entre as gerações de etanol</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-3">Processo de
+																fabricação das gerações de etanol</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-4">Etanol de
+																primeira geração</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-5">Etanol de
+																segunda geração</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-6">Etanol de
+																terceira geração</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-7">Potencial do
+																etanol em relação aos combustíveis fósseis</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-8">Avanços
+																tecnológicos na produção de etanol</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-9">Organismos e
+																microrganismos geneticamente modificados (OGM)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-10">Purificadores</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-11">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de1_pt-br.html#3-aula1-section-12">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="3de2_pt-br.html#capa">Biogás e
+														biometano
+													</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-2">Introdução</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-3">Biogás</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-4">Características
+																químicas e físicas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-5">Biometano</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-6">Características
+																químicas e físicas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-7">Aplicações e
+																perspectivas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-8">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de2_pt-br.html#3-aula2-section-9">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="3de3_pt-br.html#capa">Biodiesel e
+														combustível sustentável de aviação (SAF)
+													</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-2">O que é
+																biodiesel e o que é SAF?</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-3">Características
+																do processo de produção do biodiesel</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-4">Transesterificação</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-5">Esterificação</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-6">Hidrogenação</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-7">Craqueamento</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-8">Síntese de
+																Fischer-Tropsch</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-9">Processo de
+																produção do diesel verde (HVO)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-10">Hidrotratamento
+																(HEFA)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-11">Síntese de
+																Fischer-Tropsch (gaseificação + FT)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-12">Oligomerização
+																de álcoois (ATJ)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-13">Processo de
+																produção de SAF (sustainable aviation fuel) – bioquerose
+																de aviação</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-14">HEFA
+																(hydroprocessed esters and fatty acids)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-15">ATJ (alcool to
+																jet)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-16">Aplicações de
+																biodiesel e SAF em modais no Brasil</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-17">Perspectivas
+																para o desenvolvimento e utilização de biodiesel e
+																SAF</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-18">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de3_pt-br.html#3-aula3-section-19">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="3de4_pt-br.html#capa">4io-hidrogênio
+													</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-2">Introdução</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-3">Bio-hidrogênio</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-4">Características
+																químicas e físicas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-5">Processos de
+																obtenção de bio-hidrogênio</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-6">Aplicações e
+																perspectivas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-7">Principais
+																desafios no contexto do bio-hidrogênio</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-8">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="3de4_pt-br.html#3-aula4-section-9">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
